# urls-organizer

./: .env.example  .gitignore  NOTE.md  README.md  pyproject.toml  requirements.txt
urls_organizer/: __init__.py  bookmark.py  discord_bot.py  group.py  main.py  summarize.py
